--- a/app/src/main/res/layout/home_main_view.xml
+++ b/app/src/main/res/layout/home_main_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorOnPrimary">
@@ -25,10 +26,11 @@
             android:id="@+id/tv_head_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="What's up, Ershad!"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
+            android:layout_marginStart="@dimen/space_medium"
+            android:layout_marginTop="@dimen/space_medium"
+            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+            android:textStyle="bold"
+            tools:text="What's up, Ershad!" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -36,34 +38,36 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
+        android:padding="@dimen/space_medium"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/space_small"
             android:text="@string/categories"
             android:textAppearance="?attr/textAppearanceBody2" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/categoryList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/space_small"
             android:clipToPadding="false"
             android:orientation="horizontal" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="@dimen/space_large"
             android:text="@string/today_tasks"
             android:textAppearance="?attr/textAppearanceBody2" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/todayTasksList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:orientation="horizontal" />
+            android:layout_marginTop="@dimen/space_small" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
