Change colorPrimaryVariant and refactor vector background color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="cloudy_blue">#ADBAEB</color>
     <color name="deep_lilac">#A056C5</color>
     <color name="rhino">#373B5E</color>
+    <color name="deep_blue">#041955</color>
 </resources>
