--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?attr/colorPrimaryVariant"
+    android:orientation="horizontal"
     tools:context=".ui.home.HomeFragment">
 
     <!--<include
         layout="@layout/home_drawer_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-    -->
+        android:layout_height="match_parent" />-->
+
     <include
         layout="@layout/home_main_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-</FrameLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
