Change parent layout property to look better

--- a/app/src/main/res/layout/category_item_view.xml
+++ b/app/src/main/res/layout/category_item_view.xml
@@ -5,7 +5,8 @@
     style="@style/Widget.Todo.MaterialCard"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    android:layout_margin="10dp"
+    android:layout_marginTop="8dp"
+    android:layout_marginEnd="16dp"
     app:contentPaddingTop="@dimen/space_large">
 
     <androidx.constraintlayout.widget.ConstraintLayout
