--- a/app/src/main/res/layout/today_task_item_view.xml
+++ b/app/src/main/res/layout/today_task_item_view.xml
@@ -4,30 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     style="@style/Widget.Todo.MaterialCard"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginHorizontal="@dimen/space_medium"
+    android:layout_marginTop="@dimen/space_small"
+    app:cardElevation="0dp"
     app:contentPaddingTop="@dimen/space_medium"
-    android:layout_height="wrap_content">
+    tools:backgroundTint="@color/purple_200">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:layout_height="wrap_content">
 
         <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/lottieTaskCompleted"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_centerInParent="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/tvTaskTitle"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:lottie_fileName="success-checkbox.json"
             app:lottie_loop="false"
             app:lottie_speed="1" />
 
         <TextView
             android:id="@+id/tvTaskTitle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toEndOf="@id/lottieTaskCompleted"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="@dimen/space_medium"
             android:textAppearance="@style/TextAppearance.AppCompat.Body2"
             tools:text="This is a task title" />
 
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
