--- a/app/src/main/res/layout/home_main_view.xml
+++ b/app/src/main/res/layout/home_main_view.xml
@@ -76,17 +76,18 @@
             android:id="@+id/todayTasksList"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_small" />
+            android:layout_marginTop="@dimen/space_small"
+            tools:listitem="@layout/today_task_item_view" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/btnNewTask"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btnNewTask"
-        android:contentDescription="@string/new_task"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/space_medium"
+        android:contentDescription="@string/new_task"
         app:srcCompat="@drawable/ic_add_24" />
 
 
